# CivicPulseAi

./: .gitignore  Dockerfile  README.md  app.js  app.py  environment.py  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  styles.css
server/: app.py
