[project]
name = "civicpulseai"
version = "0.1.0"
description = "OpenEnv civic grievance routing environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "openai",
    "pydantic",
    "python-dotenv",
    "gunicorn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"